# collmbo

./: .mise.toml  CODE_OF_CONDUCT.md  Dockerfile  README.md  dev-requirements.txt  full-requirements.txt  main.py  pyproject.toml  requirements.txt  slim-requirements.txt  uv-requirements.txt  validate.sh
.github/: renovate.json
.github/workflows/: .mise.toml  auto-approve.yml  ci.yml  dependency-review.yml  hadolint.yml  lint-workflows.yml  lint.yml  publish.yml  renovate.yml  trivy.yml  update-requirements.yml  validate.yml  zizmor.yml
app/: bolt_listeners.py  env.py  home_tab_logic.py  home_tab_service.py  litellm_service.py  message_logic.py  slack_file_service.py  tools_service.py  translation_logic.py
app/mcp/: agentcore_service.py  config_logic.py  config_service.py  no_auth_tools_service.py  oauth_control_service.py  oauth_tools_logic.py  oauth_tools_service.py  tools_logic.py
docs/configuration/: optional-settings.md
docs/features/: custom-callbacks.md  image-input.md  mcp-tools.md  pdf-input.md  prompt-caching.md  redaction.md  slack-friendly-formatting.md  tools-function-calling.md
tests/: litellm_logic_test.py  message_logic_test.py  translation_logic_test.py
tests/mcp/: tools_logic_test.py
