# Dependency management with uv
# This file does NOT define a Python package - it only manages dependencies

[project]
name = "collmbo-deps"
version = "0.0.0"
description = "Dependency management only"
requires-python = ">=3.14"
dependencies = [
    "slack-bolt==1.27.0",
    "slack-sdk==3.39.0",
    "litellm==1.80.13",
    "pillow==12.1.0",
    "httpx==0.28.1",
    "bedrock-agentcore==1.1.4",
    "mcp==1.25.0",
    "strands-agents==1.21.0",
    "strands-agents-tools==0.2.19",
    # workaround for https://github.com/BerriAI/litellm/issues/13081
    "apscheduler==3.11.2",
    "backoff==2.2.1",
    "cryptography==46.0.3",
    "email-validator==2.3.0",
    "fastapi==0.128.0",
    "fastapi-sso==0.19.0",
    "orjson==3.11.5",
    "websockets==15.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.11",
    "ty==0.0.11",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
]

[tool.ruff]
include = ["*.py", "app/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
extend-select = ["B", "I", "UP"]

[tool.ty.src]
include = [".", "app", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["main", "app"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.uv]
override-dependencies = [
    "pillow==12.0.0",  # Override strands-agents-tools constraint
]
