# Dependency management with uv
# This file does NOT define a Python package - it only manages dependencies

[project]
name = "collmbo-deps"
version = "0.0.0"
description = "Dependency management only"
requires-python = ">=3.14"
dependencies = [
    "slack-bolt==1.27.0",
    "slack-sdk==3.39.0",
    "litellm==1.80.15",
    "pillow==12.1.0",
    "httpx==0.28.1",
    "bedrock-agentcore==1.1.4",
    "mcp==1.25.0",
    "strands-agents==1.21.0",
    "strands-agents-tools==0.2.19",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
]

[tool.ruff]
include = ["*.py", "app/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
extend-select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "F",    # Pyflakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "TD",   # flake8-todos
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]

[tool.ty.src]
include = [".", "app", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["main", "app"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.uv]
override-dependencies = [
    "pillow==12.0.0",  # Override strands-agents-tools constraint
]
